# project_interstellar

./: .gitignore  Cargo.toml  README.md
assets/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
assets/css/: styles.css  styles.pcss
assets/js/: index.js
public/: index.css  index.css.map  index.js  index.js.map
src/: main.rs
templates/: base.html.tera  index.html.tera
