[package]
name = "project_interstellar"
version = "0.1.0"
authors = ["Garrett Graves <gravesg57@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "diesel_postgres_pool", "serve"]